objects/TestObject__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRevenue__c</fullName>
        <label>AccountRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustmerNumber__c</fullName>
        <externalId>true</externalId>
        <label>CustmerNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <label>CustomerCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>TestObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rule2</fullName>
        <active>true</active>
        <errorConditionFormula>AND( LEN( AccountNumber__c )&gt;0, NOT( ISNUMBER( AccountNumber__c ) )  )</errorConditionFormula>
        <errorDisplayField>AccountNumber__c</errorDisplayField>
        <errorMessage>Account number should be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule3</fullName>
        <active>true</active>
        <errorConditionFormula>and(len( AccountNumber__c )&gt;0,len( AccountNumber__c)&lt;&gt;7)</errorConditionFormula>
        <errorDisplayField>AccountNumber__c</errorDisplayField>
        <errorMessage>Account number should be 7 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule4</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( AccountNumber__c ))</errorConditionFormula>
        <errorDisplayField>AccountNumber__c</errorDisplayField>
        <errorMessage>Account Number Number Should be enter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule5</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CustmerNumber__c &lt;0)</errorConditionFormula>
        <errorDisplayField>CustmerNumber__c</errorDisplayField>
        <errorMessage>CustomNumber must be a possitive integer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule6</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(AND( LEN(Password__c )&gt;=3,LEN(Password__c) &lt;7))</errorConditionFormula>
        <errorDisplayField>Password__c</errorDisplayField>
        <errorMessage>Password should be between 3 and 6</errorMessage>
    </validationRules>
</CustomObject>